# redmage-todo-example

./: .gitignore  README.md  main.py  pyproject.toml
todos/: __init__.py  convertors.py  core.py  db.py  router.py
todos/components/: __init__.py  component_registry.py  jinja2_component.py  todo_app_component.py  todo_base_component.py  todo_detail_component.py  todo_list_component.py
todos/components/todo_add_component/: __init__.py  template.html  todo_add_component.py
todos/components/todo_app_component/: __init__.py  template.html  todo_app_component.py
todos/components/todo_edit_component/: __init__.py  template.html  todo_edit_component.py
todos/components/todo_header_component/: __init__.py  template.html  todo_header_component.py
todos/components/todo_list_component/: __init__.py  template.html  todo_list_component.py
todos/components/todo_router_component/: __init__.py  template.html  todo_router_component.py
todos/static/style/: core.css
